log
Sun May  3 11:26:44 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
cd28893
Sun May  3 11:35:48 PM UTC 2026: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
c46e798
Sun May  3 11:36:55 PM UTC 2026: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  11|6
total_score: 15/60
d24ff74
Sun May  3 11:39:02 PM UTC 2026: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 40 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 25/60
facd6b5
Sun May  3 11:42:00 PM UTC 2026: 
 treemap.c | 58 +++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 53 insertions(+), 5 deletions(-)
Compilation failed
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:180:5: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
  180 |     else if (node->left == NULL || node->right == NULL) {
      |     ^~~~
treemap.c:180:5: note: adding ‘-flarge-source-files’ will allow for more column-tracking support, at the expense of compilation time and memory
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c: At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
bc86757
Sun May  3 11:42:32 PM UTC 2026: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 38 insertions(+), 25 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:140:27: error: implicit declaration of function ‘minimum’ [-Wimplicit-function-declaration]
  140 |         TreeNode *menor = minimum(node->right);
      |                           ^~~~~~~
treemap.c:140:27: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
treemap.c:152:12: error: conflicting types for ‘minimum’; have ‘TreeNode *(TreeNode *)’
  152 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:140:27: note: previous implicit declaration of ‘minimum’ with type ‘int()’
  140 |         TreeNode *menor = minimum(node->right);
      |                           ^~~~~~~
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
treemap.c:193:5: note: ‘-Wmisleading-indentation’ is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
  193 |     else if (node->left == NULL || node->right == NULL) {
      |     ^~~~
treemap.c:193:5: note: adding ‘-flarge-source-files’ will allow for more column-tracking support, at the expense of compilation time and memory
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c: In function ‘removeNode’:
test.c:606:1: error: expected declaration or statement at end of input
test.c:606:1: error: expected declaration or statement at end of input
test.c: At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
treemap.c:172:6: error: ‘removeNode’ defined but not used [-Werror=unused-function]
  172 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
6f46a27
Sun May  3 11:45:02 PM UTC 2026: 
 treemap.c | 114 +++++++++++++++++---------------------------------------------
 1 file changed, 30 insertions(+), 84 deletions(-)
 tests:  15|4
total_score: 25/60
25a5f43
Sun May  3 11:47:01 PM UTC 2026: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
 tests:  22|2
total_score: 40/60
068868f
Mon May  4 01:26:10 AM UTC 2026: 
 treemap.c | 67 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 62 insertions(+), 5 deletions(-)
 tests:  25|1
total_score: 50/60
42c220b
Mon May  4 01:53:39 AM UTC 2026: 
 treemap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  29|0
total_score: 60/60
2205e11
Mon May  4 02:06:17 AM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  29|0
total_score: 60/60
b6518eb
Mon May  4 02:10:43 AM UTC 2026: 
 tests:  29|0
total_score: 60/60
32a382c
Mon May  4 03:17:06 AM UTC 2026: 
 tests:  29|0
total_score: 60/60
8656c8e
Mon May  4 03:18:33 AM UTC 2026: 
 tests:  29|0
total_score: 60/60
4070037
